[project]
name = "comfyui-instant-reference"
version = "0.1.0"
description = "ComfyUI custom node for fast reference-based LoRA training."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/goormOwO/comfyui-instant-reference"

[tool.comfy]
PublisherId = "goormowo"
DisplayName = "ComfyUI Instant Reference"

[tool.ruff]
line-length = 100
target-version = "py310"
