[project]
name = "comfyui-instant-reference-runtime"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "accelerate==1.6.0",
    "aiofiles==23.2.1",
    "altair==4.2.2",
    "bitsandbytes>=0.45.0",
    "dadaptation==3.2",
    "diffusers[torch]==0.32.1",
    "easygui==0.98.3",
    "einops==0.7.0",
    "fairscale==0.4.13",
    "ftfy==6.3.1",
    "gradio>=5.34.1",
    "huggingface-hub==0.34.3",
    "imagesize==1.4.1",
    "invisible-watermark==0.2.0",
    "library",
    "lion-pytorch==0.2.3",
    "lycoris_lora==3.2.0.post2",
    "numpy",
    "omegaconf==2.3.0",
    "onnx==1.16.1",
    "onnxruntime-gpu==1.19.2",
    "open-clip-torch==2.20.0",
    "opencv-python==4.10.0.84",
    "prodigy-plus-schedule-free==1.9.2",
    "prodigyopt==1.1.2",
    "protobuf==3.20.3",
    "pytorch-lightning==1.9.0",
    "pytorch-optimizer==3.9.0",
    "rich==14.1.0",
    "safetensors==0.4.5",
    "schedulefree==1.4",
    "scipy==1.11.4",
    "sentencepiece==0.2.1",
    "tensorboard",
    "timm==1.0.15",
    "tk==0.1.0",
    "toml==0.10.2",
    "transformers==4.54.1",
    "voluptuous==0.15.2",
    "wandb==0.18.0",
    "xformers>=0.0.30 ; platform_system == 'Windows'",
]

[tool.uv.sources]
library = { path = "../runtime/sd-scripts", editable = true }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
